--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WeatherApp",
+  "name": "WeatherAp",
   "version": "1.0.0",
   "description": "Simple react app",
   "main": "index.js",
@@ -7,9 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "author": "Suhas",
+  "license": "NA",
   "dependencies": {
-    "axios": "^0.16.2",
-    "express": "^4.15.3",
+    "axios": "^0.9.1",
+    "express": "^4.13.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0"
@@ -19,10 +21,12 @@
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "foundation-sites": "^6.2.0",
     "jquery": "^2.2.1",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13"
